Connectivity testing creates lots of failed neighbor entries
On a fresh installation of Fedora 30 on my laptop, I get lots of failed neighbor entries for libvirt's bridge (virbr0) after only a few minutes. On my desktop (also Fedora 30), I get them for my docker bridges, my libvirt bridge, and my disconnected ethernet interface (I have two ethernet interfaces). The addresses all reverse-resolve to Fedora Project domains.
If I recall correctly, this is because Linux considers all IP addresses to be on-link when an interface has no configured routes. So, when NM comes around to check for connectivity on those interfaces (my inactive ethernet NIC is unplugged, with state DOWN
, so there shouldn't be any reason to test it for connectivity as far as I can tell), Linux adds the IPs to the neighbor table and marks them failed.
This is benign enough on my laptop, but after a long time, this overflows the neighbor table on my desktop, which has many interfaces, and causes dmesg to start complaining of neighbor table overflows constantly. I discovered this when I was debugging horrible network performance on my desktop. I'm still not sure if this is related to that performance issue, but I figured I'd report it anyway.
Here's an example of the output of ip -r -4 neigh
after about an hour of time logged in on my desktop, with all the bridges disabled (still shows my disconnected interface):
proxy01.fedoraproject.org dev enp8s0 FAILED
_gateway dev eno1 lladdr f0:9f:c2:68:58:7d REACHABLE
proxy10.fedoraproject.org dev enp8s0 FAILED
vm3.fedora.ibiblio.org dev enp8s0 FAILED
67.203.2.67.rdns.colocationamerica.com dev enp8s0 FAILED
proxy06.fedoraproject.org dev enp8s0 FAILED
67.219.144.68 dev enp8s0 FAILED
proxy14.fedoraproject.org dev enp8s0 FAILED
proxy09.fedoraproject.org dev enp8s0 FAILED
proxy13-rdu02.fedoraproject.org dev enp8s0 FAILED
vm18.fedora.ibiblio.org dev enp8s0 FAILED
And this is the output of ip link
(eno1
is the interface that I am actually using, and enp8s0 is unplugged):
1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
2: enp8s0: <NO-CARRIER,BROADCAST,MULTICAST,UP> mtu 1500 qdisc mq state DOWN mode DEFAULT group default qlen 1000
link/ether 78:24:af:... brd ff:ff:ff:ff:ff:ff
3: eno1: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP mode DEFAULT group default qlen 1000
link/ether 78:24:af:... brd ff:ff:ff:ff:ff:ff