src/nm-ip4-config.h
@@ -412,6 +412,18 @@ nm_ip_config_hash (const NMIPConfig *self, GChecksum *sum, gboolean dns_only)
 	_NM_IP_CONFIG_DISPATCH_VOID (self, nm_ip4_config_hash, nm_ip6_config_hash, sum, dns_only);
 }
 
+static inline guint
+nm_ip_config_get_num_addresses (const NMIPConfig *self)
+{
+	_NM_IP_CONFIG_DISPATCH (self, nm_ip4_config_get_num_addresses, nm_ip6_config_get_num_addresses);
+}
+
+static inline guint
+nm_ip_config_get_num_routes (const NMIPConfig *self)
+{
+	_NM_IP_CONFIG_DISPATCH (self, nm_ip4_config_get_num_routes, nm_ip6_config_get_num_routes);
+}
+
 static inline void
 nm_ip_config_add_address (NMIPConfig *self, const NMPlatformIPAddress *address)
 {
